Fix spacing for applet-box (top/bottom panel)
Fix spacing for applet-box of top/bottom panel.
See also: ac43b6fbed41dd0df427d0a4a48a49627334bfc0

--- a/Carta/files/Carta/cinnamon/cinnamon.css
+++ b/Carta/files/Carta/cinnamon/cinnamon.css
@@ -1862,6 +1862,11 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
     transition-duration: 100ms;
 }
 
+.panel-top .applet-box,
+.panel-bottom .applet-box {
+    spacing: 3px;
+}
+
 .applet-box StLabel {
     padding-top: 2px;
 }
